myteo/test/analyze/type_check/binary_operation/equality.exp
Error: Expected type `Int` but found `Bool`
test/analyze/type_check/binary_operation/equality.myte:14:8-12
 14 |   (1 == true: Bool);
    |         ^^^^

Error: Expected type `Bool` but found `Int`
test/analyze/type_check/binary_operation/equality.myte:15:11
 15 |   (true == 1: Bool);
    |            ^

Error: Expected type `Int -> Int` but found `Int -> String`
test/analyze/type_check/binary_operation/equality.myte:16:15-26
 16 |   (intToInt == intToString: Bool);
    |                ^^^^^^^^^^^

Error: Expected type `Int` but found `Bool`
test/analyze/type_check/binary_operation/equality.myte:17:8-12
 17 |   (1 is true: Bool);
    |         ^^^^